--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+	"name": "mediawiki/spam-blacklist",
+	"type": "mediawiki-extension",
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2",
