--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
 		"test": "grunt test"
 	},
 	"devDependencies": {
-		"eslint-config-wikimedia": "0.11.0",
-		"grunt": "1.0.3",
+		"eslint-config-wikimedia": "0.12.0",
+		"grunt": "1.0.4",
 		"grunt-banana-checker": "0.7.0",
-		"grunt-eslint": "21.0.0",
-		"grunt-jsonlint": "1.1.0"
+		"grunt-eslint": "21.0.0"
 	}
 }
